# nix-dev-templates

./: AGENTS.md  README.md  flake.nix
ai/coding-agent/.claude/: CLAUDE.md
ai/python/: .gitignore  flake.nix  pyproject.toml
backend/nix/anywhere-disko/: flake.nix
backend/nix/anywhere-disko/hosts/anywhere/: configuration.nix  disk-config.nix  hardware-configuration.nix
backend/python/: flake.nix
backend/python/.github/: copilot.md
containers/docker/: .envrc  .gitignore  flake.nix
containers/docker/nix/docker/: build-docker-image.template.nix
frontend/typescript/bun-svelte/: README.md  flake.nix
fullstack/python-typescript/: .gitignore  flake.nix
generic/: flake.nix
zig/generic/: .gitignore  flake.nix  mkdocs.yml
