[project]
name = "PLEASE-CHANGE"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "pymongo",
    "langchain",
    "faiss-cpu",
    "ollama",
    "websockets"
]
